<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".CarsActivity">

    <TextView
        android:text="@string/compass_default"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="136dp"
        android:gravity="center"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:id="@+id/compassView" />

    <TextView
        android:text="@string/uuid_default"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:gravity="center"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/uuidView" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/compassView"
        android:layout_above="@id/uuidView"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/xLayout">

                <TextView
                    android:text="@string/x_tilt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="40dp"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:id="@+id/xTiltView"
                    android:paddingRight="16dp"/>

                <TextView
                    android:text="@string/compass_default"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="40dp"
                    android:singleLine="true"
                    android:layout_alignLeft="@id/xTiltView"
                    android:textColor="@android:color/black"
                    android:gravity="center"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/xLayout"
                android:id="@+id/yLayout"
                android:paddingTop="16dp">

                <TextView
                    android:text="@string/y_tilt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="40dp"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:id="@+id/yTiltView"
                    android:paddingRight="16dp"/>

                <TextView
                    android:text="@string/compass_default"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="40dp"
                    android:singleLine="true"
                    android:layout_alignLeft="@id/xTiltView"
                    android:textColor="@android:color/black"
                    android:gravity="center"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/yLayout"
                android:paddingTop="16dp">

                <TextView
                    android:text="@string/z_tilt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="40dp"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:id="@+id/zTiltView"
                    android:paddingRight="16dp"/>

                <TextView
                    android:text="@string/compass_default"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="40dp"
                    android:singleLine="true"
                    android:layout_alignLeft="@id/xTiltView"
                    android:textColor="@android:color/black"
                    android:gravity="center"
                    android:textStyle="bold" />

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>
